refactor: Applied responsive flex and spacing Bootstrap for CatsForm.

--- a/src/theme/scss/app/app.scss
+++ b/src/theme/scss/app/app.scss
@@ -127,7 +127,12 @@ hr.light {
 .flex-width-400 {
   -ms-flex: 0 0 400px;
   flex: 0 0 400px;
-} 
+}
+
+.flex-width-600 {
+  -ms-flex: 0 0 600px;
+  flex: 0 0 600px;
+}
 
 .width-100 {
   width: calculate-rem(100px);
