refactor: Applied responsive flex and spacing Bootstrap for LineChart.

--- a/src/theme/scss/app/app.scss
+++ b/src/theme/scss/app/app.scss
@@ -129,6 +129,11 @@ hr.light {
   flex: 0 0 400px;
 }
 
+.flex-width-500 {
+  -ms-flex: 0 0 500px;
+  flex: 0 0 500px;
+}
+
 .flex-width-600 {
   -ms-flex: 0 0 600px;
   flex: 0 0 600px;
