refactor: Modified usage of Bootstrap css classes for basic spacing and removed usage of scss var footer-margin-top.

--- a/src/containers/App/scss/AppScss1.scss
+++ b/src/containers/App/scss/AppScss1.scss
@@ -42,7 +42,7 @@
   background-color: $shared-var-color-syracuse-orange;
   // @extend %footerHeight;
   height: calculate-rem($footer-height);
-  .flexContainer {
+  .copyright {
     color: #FFFFFF;
     @include lobster-v20-latin-regular-font;
   }
