--- a/src/theme/scss/app/app.scss
+++ b/src/theme/scss/app/app.scss
@@ -18,7 +18,8 @@ html {
 
 body {
   /* Margin bottom by footer height plus a 'margin-top: 15px' */
-  margin-bottom: calculate-rem($footer-height + $footer-margin-top);
+  // margin-bottom: calculate-rem($footer-height + $footer-margin-top);
+  margin-bottom: calculate-rem($footer-height);
 }
 
 #main-nav .navbar-collapse .navbar-nav .nav-item .nav-link {
