--- a/src/theme/scss/app/variables.scss
+++ b/src/theme/scss/app/variables.scss
@@ -1,4 +1,3 @@
-
 // -----------------------------------------------------
 // ---------------- SHARED APP VARIABLES ---------------
 // -----------------------------------------------------
@@ -7,7 +6,7 @@ $font-size-browser-default: 16px !default;
 
 $footer-height: 100px !default;
 
-$footer-margin-top: 15px !default;
+// $footer-margin-top: 15px !default;
 
 $color-cornflowerblue: #6495ED !default;
 
